--- a/src/components/time/time.module.scss
+++ b/src/components/time/time.module.scss
@@ -3,16 +3,16 @@
 .time_wrapper{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
     cursor: pointer;
-    height:100%;
 }
 
 .time{
     font-family: 'Anton', sans-serif;
     font-size: 25vw;
     color:#282828;
-    transition: all .5s;
+    transition: all 1s;
 }
 
 .active{
